@@ -1,6 +1,7 @@
 GAMS Transfer R
 ==================
 - Significant performance improvements to Container write method
+- bug fix in Container read when reading a `Symbol` with unused UELs
 
 GAMS Transfer R v1.12.0
 ==================
